--- a/Buttons.html
+++ b/Buttons.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website with Buttons</title>
+    <title>Decorated Man's Decorated Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
