--- a/Index.html
+++ b/Index.html
@@ -4,41 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decorated Man's Decorated Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 18px;
-            margin: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #calendarButton {
-            background-color: #3498db;
-            color: white;
-        }
-        #filesButton {
-            background-color: #e74c3c;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton">Calendar</a>
-        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton">Files</a>
-    </div>
+
+    <nav>
+        <ul>
+            <li><a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York">Calendar</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link">Files</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
