--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
         <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton">Calendar</a>
-        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton">Files</a>
+        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton">Google Drive</a>
     </div>
 </body>
 </html>
