--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decorated Man's Decorated Page</title>
-    <style>
+   <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -33,12 +33,22 @@
             background-color: #e74c3c;
             color: white;
         }
+        #discordButton {
+            background-color: #7289DA;
+            color: white;
+        }
+        #syrinscapeButton {
+            background-color: #FF9900;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton">Calendar</a>
-        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton">Google Drive</a>
+        <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton" target="_blank">Calendar</a>
+        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton" target="_blank">Files</a>
+        <a href="https://discord.gg/v7RRTqeTY" class="button" id="discordButton" target="_blank">Discord</a>
+        <a href="https://syrinscape.com/online/cp/follow-invite/261575-36879803-4ecd-4164-8bd5-0c748eaa0623/" class="button" id="syrinscapeButton" target="_blank">Syrinscape</a>
     </div>
 </body>
 </html>
