--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
+            background-color: rgb(68, 70, 84); /* Updated background color */
         }
         .container {
             display: flex;
