--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decorated Man's Decorated Page</title>
-    <style>
+     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -13,19 +13,24 @@
             background-color: rgb(68, 70, 84);
         }
         .container {
-            /* display: flex; */ /* Remove this line to stack buttons */
-            justify-content: center;
+            max-width: 400px; /* Set a maximum width for the container */
+            margin: 0 auto; /* Center the container horizontally */
+            padding: 20px; /* Add some padding around the container */
+            display: flex;
+            flex-direction: column; /* Stack buttons vertically */
             align-items: center;
+            justify-content: center;
             height: 100vh;
         }
         .button {
-            display: block; /* Make buttons block-level to stack vertically */
-            padding: 15px 30px;
-            font-size: 18px;
-            margin: 10px;
+            display: block;
+            padding: 10px 20px;
+            font-size: 14px;
+            margin: 5px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            width: 100%; /* Buttons take full width of container */
         }
         #calendarButton {
             background-color: #3498db;
