--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton" target="_blank">Calendar</a>
-        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton" target="_blank">Files</a>
+        <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton" target="_blank">Google Drive</a>
         <a href="https://discord.gg/v7RRTqeTY" class="button" id="discordButton" target="_blank">Discord</a>
         <a href="https://syrinscape.com/online/cp/follow-invite/261575-36879803-4ecd-4164-8bd5-0c748eaa0623/" class="button" id="syrinscapeButton" target="_blank">Syrinscape</a>
     </div>
