--- a/index.html
+++ b/index.html
@@ -4,45 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decorated Man's Decorated Page</title>
-   <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: rgb(68, 70, 84); /* Updated background color */
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 18px;
-            margin: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #calendarButton {
-            background-color: #3498db;
-            color: white;
-        }
-        #filesButton {
-            background-color: #e74c3c;
-            color: white;
-        }
-        #discordButton {
-            background-color: #7289DA;
-            color: white;
-        }
-        #syrinscapeButton {
-            background-color: #FF9900;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -51,5 +13,6 @@
         <a href="https://discord.gg/v7RRTqeTY" class="button" id="discordButton" target="_blank">Discord</a>
         <a href="https://syrinscape.com/online/cp/follow-invite/261575-36879803-4ecd-4164-8bd5-0c748eaa0623/" class="button" id="syrinscapeButton" target="_blank">Syrinscape</a>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
