--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <a href="https://calendar.google.com/calendar/u/0/embed?src=9e9h8lqdepv06keogqunuh84sg@group.calendar.google.com&ctz=America/New_York" class="button" id="calendarButton" target="_blank">Calendar</a>
         <a href="https://drive.google.com/drive/folders/1JUhk1HK77AsHohBbPLMvRhozvuI7UPGr?usp=drive_link" class="button" id="filesButton" target="_blank">Files</a>
-        <a href="https://discord.gg/v7RRTqeTY" class="button" id="discordButton" target="_blank">Discord</a>
+        <a href="https://discord.com/invite/8NvGseku" class="button" id="discordButton" target="_blank">Discord</a>
         <a href="https://syrinscape.com/online/cp/follow-invite/261575-36879803-4ecd-4164-8bd5-0c748eaa0623/" class="button" id="syrinscapeButton" target="_blank">Syrinscape</a>
     </div>
     <script src="script.js"></script>
